# hello-dbt

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/versions/: 5b40825f2595_create_test_table.py
dags/: dbt_dags.py  test_dag.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/example/: download_counts_per_game.sql  most_downloaded_game.sql  schema.yml
dbt/seeds/: downloads.csv  games.csv  users.csv
dbt/snapshots/: games_snapshot.sql
dbt/tests/: test_download_date.sql
